--- a/debian/rules
+++ b/debian/rules
@@ -18,6 +18,7 @@ binary-indep: build
 	./run dh_testdir
 	./run dh_testroot
 	./run dh_clean -k
+	./run dh_auto_install
 	./run dh_installdocs
 	./run dh_installexamples
 	./run dh_installman
