remove -B from examples for now
There is some concern that passing -B to make may violate debian policy.
<eyeroll>

--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,4 @@
-#!/usr/bin/make -Bf
+#!/usr/bin/make -f
 # If you're looking for an example debian/rules that uses debhelper, see
 # the examples directory.
 # 
