Add dh_lintian french translation

--- a/man/po4a/po4a.cfg
+++ b/man/po4a/po4a.cfg
@@ -43,6 +43,7 @@
 [type: pod] dh_installwm	$lang:man/$lang/dh_installwm.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_installxfonts	$lang:man/$lang/dh_installxfonts.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_link		$lang:man/$lang/dh_link.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es
+[type: pod] dh_lintian		$lang:man/$lang/dh_lintian.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es
 [type: pod] dh_listpackages	$lang:man/$lang/dh_listpackages.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es
 [type: pod] dh_makeshlibs	$lang:man/$lang/dh_makeshlibs.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es
 [type: pod] dh_md5sums		$lang:man/$lang/dh_md5sums.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es
