--- a/man/po4a/po4a.cfg
+++ b/man/po4a/po4a.cfg
@@ -1,14 +1,15 @@
 [po4a_langs] fr es
 [po4a_paths] man/po4a/po/debhelper.pot 	$lang:man/po4a/po/$lang.po
 [po4a_alias:pod] pod opt_fr:"-L ISO-8859-15 -A UTF-8"
+[po4a_alias:pod] pod opt_es:"-L UTF-8 -A ISO-8859-15"
 [type: pod] debhelper.pod	$lang:man/$lang/debhelper.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
-[type: pod] dh			$lang:man/$lang/dh.pod			add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
-[type: pod] dh_auto_build	$lang:man/$lang/dh_auto_build.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
-[type: pod] dh_auto_clean	$lang:man/$lang/dh_auto_clean.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
-[type: pod] dh_auto_configure	$lang:man/$lang/dh_auto_configure.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
-[type: pod] dh_auto_install	$lang:man/$lang/dh_auto_install.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
-[type: pod] dh_auto_test	$lang:man/$lang/dh_auto_test.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
-[type: pod] dh_bugfiles		$lang:man/$lang/dh_bugfiles.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
+[type: pod] dh			$lang:man/$lang/dh.pod			add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es 
+[type: pod] dh_auto_build	$lang:man/$lang/dh_auto_build.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es
+[type: pod] dh_auto_clean	$lang:man/$lang/dh_auto_clean.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es
+[type: pod] dh_auto_configure	$lang:man/$lang/dh_auto_configure.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es
+[type: pod] dh_auto_install	$lang:man/$lang/dh_auto_install.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es
+[type: pod] dh_auto_test	$lang:man/$lang/dh_auto_test.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es
+[type: pod] dh_bugfiles		$lang:man/$lang/dh_bugfiles.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es
 [type: pod] dh_builddeb 	$lang:man/$lang/dh_builddeb.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_clean 		$lang:man/$lang/dh_clean.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_compress 	$lang:man/$lang/dh_compress.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
@@ -16,7 +17,7 @@
 [type: pod] dh_fixperms 	$lang:man/$lang/dh_fixperms.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_gconf 		$lang:man/$lang/dh_gconf.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_gencontrol 	$lang:man/$lang/dh_gencontrol.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
-[type: pod] dh_icons		$lang:man/$lang/dh_icons.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add.es
+[type: pod] dh_icons		$lang:man/$lang/dh_icons.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es
 [type: pod] dh_install		$lang:man/$lang/dh_install.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_installcatalogs	$lang:man/$lang/dh_installcatalogs.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es
 [type: pod] dh_installchangelogs $lang:man/$lang/dh_installchangelogs.pod add_fr:man/po4a/add.fr add_es:man/po4a/add1.es
