remove build-dep on file
It was only needed so dh_shlibdeps and dh_strip, which are no longer run
during build.

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
-Build-Depends: po4a (>= 0.24), file (>= 3.23), perl-base (>= 5.10)
+Build-Depends: po4a (>= 0.24), perl-base (>= 5.10)
 Standards-Version: 3.9.2
 Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
 Vcs-Browser: http://git.debian.org/?p=debhelper/debhelper.git;a=summary
