--- a/man/po4a/po4a.cfg
+++ b/man/po4a/po4a.cfg
@@ -1,8 +1,9 @@
-[po4a_langs] fr es de
+[po4a_langs] fr es de pt
 [po4a_paths] man/po4a/po/debhelper.pot 	$lang:man/po4a/po/$lang.po
 [po4a_alias:pod] pod opt_fr:"-L ISO-8859-15 -A UTF-8"
 [po4a_alias:pod] pod opt_es:"-L UTF-8 -A ISO-8859-15"
 [po4a_alias:pod] pod opt_de:"-L ISO-8859-15 -A UTF-8"
+[po4a_alias:pod] pod opt_pt:"-L UTF-8 -A UTF-8"
 [type: pod] debhelper.pod	$lang:man/$lang/debhelper.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add1.es  add_de:man/po4a/add.de
 [type: pod] dh			$lang:man/$lang/dh.pod			add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es  add_de:man/po4a/add.de
 [type: pod] dh_auto_build	$lang:man/$lang/dh_auto_build.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add3.es  add_de:man/po4a/add.de
