--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.9.5
 Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
 Vcs-Browser: http://git.debian.org/?p=debhelper/debhelper.git;a=summary
-Homepage: http://kitenet.net/~joey/code/debhelper/
+Homepage: http://joeyh.name/code/debhelper/
 
 Package: debhelper
 Architecture: all
