--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
-Uploaders: Niels Thykier <niels@thykier.net>
+Uploaders: Niels Thykier <niels@thykier.net>, Bernhard R. Link <brlink@debian.org>
 Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.9.6
 Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
