d/control: Use canonical URLS for the Vcs-* fields
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
 Uploaders: Niels Thykier <niels@thykier.net>, Bernhard R. Link <brlink@debian.org>, Tianon Gravi <admwiggin@gmail.com>
 Build-Depends: po4a (>= 0.24)
 Standards-Version: 3.9.6
-Vcs-Git: git://git.debian.org/git/debhelper/debhelper.git
-Vcs-Browser: http://git.debian.org/?p=debhelper/debhelper.git;a=summary
+Vcs-Git: git://anonscm.debian.org/debhelper/debhelper.git
+Vcs-Browser: https://anonscm.debian.org/cgit/debhelper/debhelper.git
 Homepage: http://joeyh.name/code/debhelper/
 
 Package: debhelper
