--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
 Uploaders: Niels Thykier <niels@thykier.net>, Bernhard R. Link <brlink@debian.org>, Tianon Gravi <admwiggin@gmail.com>
-Build-Depends: po4a (>= 0.24)
+Build-Depends: po4a (>= 0.24), dpkg-dev (>= 1.18.0~)
 Standards-Version: 3.9.6
 Vcs-Git: git://anonscm.debian.org/debhelper/debhelper.git
 Vcs-Browser: https://anonscm.debian.org/cgit/debhelper/debhelper.git
