Let dpkg-gencontrol figure out the value for the source field
Since dpkg-dev 1.18.2~, dpkg-gencontrol figures out the desired value
for the "Source" field for ddebs (and does so better than debhelper
did).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Homepage: http://joeyh.name/code/debhelper/
 
 Package: debhelper
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, file (>= 3.23), dpkg (>= 1.16.2), dpkg-dev (>= 1.17.0), binutils, po-debconf, man-db (>= 2.5.1-1), libdpkg-perl (>= 1.17.14)
+Depends: ${perl:Depends}, ${misc:Depends}, file (>= 3.23), dpkg (>= 1.16.2), dpkg-dev (>= 1.18.2~), binutils, po-debconf, man-db (>= 2.5.1-1), libdpkg-perl (>= 1.17.14)
 Suggests: dh-make
 Multi-Arch: foreign
 Description: helper programs for debian/rules
