--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
 Uploaders: Niels Thykier <niels@thykier.net>, Bernhard R. Link <brlink@debian.org>, Tianon Gravi <tianon@debian.org>
 Build-Depends: po4a (>= 0.24), dpkg-dev (>= 1.18.0~)
 Standards-Version: 3.9.6
-Vcs-Git: git://anonscm.debian.org/debhelper/debhelper.git
-Vcs-Browser: https://anonscm.debian.org/cgit/debhelper/debhelper.git
+Vcs-Git: https://anonscm.debian.org/git/debhelper/debhelper.git
+Vcs-Browser: https://anonscm.debian.org/git/debhelper/debhelper.git
 
 Package: debhelper
 Architecture: all
