dh,d/rules: Use override targets to avoid B-Ds
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/rules
+++ b/debian/rules
@@ -10,3 +10,7 @@
 
 %:
 	./run dh $@ --no-parallel
+
+# Disable as they are unneeded (and we can then be sure debhelper
+# builds without needing autotools-dev, dh-strip-nondetermism etc.)
+override_dh_update_autotools_config override_dh_strip_nondeterminism:
