Remove myself from uploaders
Niels is doing a really, really great job.  I originally wanted to just
be sure there was _someone_ on the package, even if it was just me in
way over my head, and IMO we got waaay more than that in Niels. :)

I'm planning to stay on the mailing list, but having me in Uploaders
really doesn't reflect any form of reality. :D

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debhelper
 Section: devel
 Priority: optional
 Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
-Uploaders: Niels Thykier <niels@thykier.net>, Bernhard R. Link <brlink@debian.org>, Tianon Gravi <tianon@debian.org>
+Uploaders: Niels Thykier <niels@thykier.net>, Bernhard R. Link <brlink@debian.org>
 Build-Depends: po4a (>= 0.24), dpkg-dev (>= 1.18.0~), perl:any
 Standards-Version: 3.9.8
 Vcs-Git: https://anonscm.debian.org/git/debhelper/debhelper.git
