d/control: Provides dh-systemd (= 1.38)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Depends: ${perl:Depends}, ${misc:Depends}, file (>= 3.23), dpkg (>= 1.16.2), dpk
 Breaks: dh-systemd (<< 1.38)
 Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make
+Provides: dh-systemd (= 1.38)
 Multi-Arch: foreign
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
