Use uppercase "Debian" in package description when the project is meant
Fixes lintian warning capitalization-error-in-description.

Signed-off-by: Axel Beckert <abe@deuxchevaux.org>

--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,8 @@ Provides: dh-systemd (= 1.38)
 Multi-Arch: foreign
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
- automate common tasks related to building debian packages. Programs
+ automate common tasks related to building Debian packages. Programs
  are included to install various files into your package, compress 
- files, fix file permissions, integrate your package with the debian 
- menu system, debconf, doc-base, etc. Most debian packages use debhelper
+ files, fix file permissions, integrate your package with the Debian 
+ menu system, debconf, doc-base, etc. Most Debian packages use debhelper
  as part of their build process.
