--- a/man/po4a/po4a.cfg
+++ b/man/po4a/po4a.cfg
@@ -59,3 +59,4 @@
 [type: pod] dh_usrlocal		$lang:man/$lang/dh_usrlocal.pod		add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es  add_de:man/po4a/add.de  add_pt:man/po4a/add.pt
 [type: pod] dh_systemd_enable	$lang:man/$lang/dh_systemd_enable.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es  add_de:man/po4a/add.de  add_pt:man/po4a/add.pt
 [type: pod] dh_systemd_start	$lang:man/$lang/dh_systemd_start.pod	add_fr:man/po4a/add.fr	add_es:man/po4a/add2.es  add_de:man/po4a/add.de  add_pt:man/po4a/add.pt
+[type: pod] strings-kept-translations.pod $lang:man/$lang/strings-kept-translations.pod
