--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,6 @@ Depends: autotools-dev,
 Breaks: dh-systemd (<< 1.38)
 Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make
-Provides: dh-systemd (= 1.38)
 Multi-Arch: foreign
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
@@ -37,3 +36,13 @@ Description: helper programs for debian/rules
  files, fix file permissions, integrate your package with the Debian
  menu system, debconf, doc-base, etc. Most Debian packages use debhelper
  as part of their build process.
+
+Package: dh-systemd
+Section: oldlibs
+Priority: extra
+Architecture: all
+Multi-Arch: foreign
+Depends: debhelper (>= 9.20160709),
+         ${misc:Depends},
+Description: debhelper add-on to handle systemd unit files - transitional package
+ This package is for transitional purposes and can be removed safely.
