--- a/debian/rules
+++ b/debian/rules
@@ -18,4 +18,4 @@
 override_dh_update_autotools_config override_dh_strip_nondeterminism:
 
 override_dh_auto_install:
-	dh_auto_install --destdir=debian/debhelper
+	./run dh_auto_install --destdir=debian/debhelper
