--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Depends: autotools-dev,
          dh-autoreconf (>= 12~),
          dh-strip-nondeterminism,
          dpkg (>= 1.16.2),
-         dpkg-dev (>= 1.17.0)
+         dpkg-dev (>= 1.17.0),
          file (>= 3.23),
          libdpkg-perl (>= 1.17.14),
          man-db (>= 2.5.1-1),
