--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: dpkg-dev (>= 1.18.0~),
                perl:any,
                po4a (>= 0.24)
 Standards-Version: 3.9.8
+Testsuite: autopkgtest-pkg-perl
 Vcs-Git: https://anonscm.debian.org/git/debhelper/debhelper.git
 Vcs-Browser: https://anonscm.debian.org/git/debhelper/debhelper.git
 
