--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,10 @@ Priority: optional
 Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
 Uploaders: Niels Thykier <niels@thykier.net>,
            Bernhard R. Link <brlink@debian.org>
-Build-Depends: dpkg-dev (>= 1.18.0~),
+Build-Depends: dpkg-dev (>= 1.19.0.3~),
                perl:any,
                po4a (>= 0.24)
+Rules-Requires-Root: no
 Standards-Version: 4.1.1
 Testsuite: autopkgtest-pkg-perl
 Vcs-Git: https://anonscm.debian.org/git/debhelper/debhelper.git
@@ -19,7 +20,7 @@ Depends: autotools-dev,
          dh-autoreconf (>= 12~),
          dh-strip-nondeterminism (>= 0.028~),
          dpkg (>= 1.16.2),
-         dpkg-dev (>= 1.18.2~),
+         dpkg-dev (>= 1.19.0.3~),
          file (>= 3.23),
          libdpkg-perl (>= 1.17.14),
          man-db (>= 2.5.1-1),
