--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
 Uploaders: Niels Thykier <niels@thykier.net>,
            Bernhard R. Link <brlink@debian.org>
-Build-Depends: dpkg-dev (>= 1.19.0.3~),
+Build-Depends: dpkg (>= 1.19.0.3~),
+               dpkg-dev (>= 1.19.0.3~),
                perl:any,
                po4a (>= 0.24)
 Rules-Requires-Root: no
@@ -19,7 +20,7 @@ Depends: autotools-dev,
          binutils,
          dh-autoreconf (>= 12~),
          dh-strip-nondeterminism (>= 0.028~),
-         dpkg (>= 1.16.2),
+         dpkg (>= 1.19.0.3~),
          dpkg-dev (>= 1.19.0.3~),
          file (>= 3.23),
          libdpkg-perl (>= 1.17.14),
