d/control: Add Suggests on dwz
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,7 @@ Depends: autotools-dev,
          ${perl:Depends}
 Breaks: dh-systemd (<< 1.38)
 Replaces: dh-systemd (<< 1.38)
-Suggests: dh-make
+Suggests: dh-make, dwz
 Multi-Arch: foreign
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
