--- a/t/dh_installdocs/debian/control
+++ b/t/dh_installdocs/debian/control
@@ -2,6 +2,7 @@ Source: foo
 Section: misc
 Priority: optional
 Maintainer: Test <testing@nowhere>
+Rules-Requires-Root: no
 Standards-Version: 3.9.8
 
 Package: foo
