d/control: Add a Breaks for cmake in backports
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Depends: autotools-dev,
          po-debconf,
          ${misc:Depends},
          ${perl:Depends}
-Breaks: dh-systemd (<< 1.38)
+Breaks: dh-systemd (<< 1.38), cmake (<< 3.8~)
 Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make, dwz
 Multi-Arch: foreign
