--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: Niels Thykier <niels@thykier.net>,
 Build-Depends: dpkg (>= 1.19.0.3~),
                dpkg-dev (>= 1.19.0.3~),
                perl:any,
-               po4a (>= 0.24)
+               po4a,
 Rules-Requires-Root: no
 Standards-Version: 4.1.2
 Testsuite: autopkgtest-pkg-perl
@@ -18,13 +18,19 @@ Package: debhelper
 Architecture: all
 Depends: autotools-dev,
          binutils,
+# Version where dh-autoreconf supports --sourcedirectory.  Can be
+# relaxed if no packages rely on it.
          dh-autoreconf (>= 12~),
+# Version constraint is to get a version of dh-strip-nondeterminism
+# without several bugs.  The constraint can be relaxed if an older
+# version is sufficient.
          dh-strip-nondeterminism (>= 0.028~),
+# Rules-Requires-Root support.  Otherwise it stops at 1.18.0/1.18.2 for dbgsym support.
          dpkg (>= 1.19.0.3~),
          dpkg-dev (>= 1.19.0.3~),
          file (>= 3.23),
          libdpkg-perl (>= 1.17.14),
-         man-db (>= 2.5.1-1),
+         man-db,
          po-debconf,
          ${misc:Depends},
          ${perl:Depends}
