d/control: Add breaks on meson for backports
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -39,6 +39,8 @@ Breaks: dh-systemd (<< 1.38),
 # - Can be dropped (with the caveat that cmake packages may behave differently
 #   depending on the version of cmake).
         cmake (<< 3.9~),
+# meson build system uses --wrap-mode, which requires meson (>= 0.40.0)
+        meson (<< 0.40.0~),
 Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make, dwz
 Multi-Arch: foreign
