--- a/debian/control
+++ b/debian/control
@@ -11,8 +11,8 @@ Build-Depends: dpkg (>= 1.19.0.3~),
 Rules-Requires-Root: no
 Standards-Version: 4.1.3
 Testsuite: autopkgtest-pkg-perl
-Vcs-Git: https://anonscm.debian.org/git/debhelper/debhelper.git
-Vcs-Browser: https://anonscm.debian.org/git/debhelper/debhelper.git
+Vcs-Git: https://salsa.debian.org/debian/debhelper.git
+Vcs-Browser: https://salsa.debian.org/debian/debhelper
 
 Package: debhelper
 Architecture: all
