Update maintainer address to debhelper@packages.d.o
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: debhelper
 Section: devel
 Priority: optional
-Maintainer: Debhelper Maintainers <debhelper-devel@lists.alioth.debian.org>
+Maintainer: Debhelper Maintainers <debhelper@packages.debian.org>
 Uploaders: Niels Thykier <niels@thykier.net>,
            Bernhard R. Link <brlink@debian.org>
 Build-Depends: dpkg (>= 1.19.0.3~),
