d/control: Bump dependency on dh-autoreconf
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -17,9 +17,10 @@ Package: debhelper
 Architecture: all
 Depends: autotools-dev,
          binutils,
-# Version where dh-autoreconf supports --sourcedirectory.  Can be
+# Version 12 is where dh-autoreconf supports --sourcedirectory.  Can be
 # relaxed if no packages rely on it.
-         dh-autoreconf (>= 12~),
+# Version 16 fixes #887482
+         dh-autoreconf (>= 16~),
 # Version constraint is to get a version of dh-strip-nondeterminism
 # without several bugs.  The constraint can be relaxed if an older
 # version is sufficient.
