Generate Provides field automatically
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -45,6 +45,7 @@ Breaks: dh-systemd (<< 1.38),
         meson (<< 0.40.0~),
 Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make, dwz
+Provides: ${dh:CompatLevels}
 Multi-Arch: foreign
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
