--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,8 @@ Depends: autotools-dev,
          libdpkg-perl (>= 1.17.14),
 # makefile.pm uses -O which according to #768791 requires make (>= 4~).
 # The -O is an aid to maintainers, debhelper works perfectly fine without it.
-         make (>= 4~),
+# (commented to avoid issues with make-guile, #892586)
+#         make (>= 4~),
          man-db,
          po-debconf,
          ${misc:Depends},
