--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Debhelper Maintainers <debhelper@packages.debian.org>
 Uploaders: Niels Thykier <niels@thykier.net>,
-Build-Depends: dpkg (>= 1.19.0.5~),
-               dpkg-dev (>= 1.19.0.5~),
+Build-Depends: dpkg-dev (>= 1.18.0~),
                perl:any,
                po4a,
 Rules-Requires-Root: no
@@ -25,9 +24,9 @@ Depends: autotools-dev,
 # without several bugs.  The constraint can be relaxed if an older
 # version is sufficient.
          dh-strip-nondeterminism (>= 0.028~),
-# Rules-Requires-Root support.  Otherwise it stops at 1.18.0/1.18.2 for dbgsym support.
-         dpkg (>= 1.19.0.5~),
-         dpkg-dev (>= 1.19.0.5~),
+# dbgsym support landed in 1.18.0, 1.18.2 fixes a related nasty bug.
+         dpkg (>= 1.18.0~),
+         dpkg-dev (>= 1.18.2~),
          file (>= 3.23),
          libdpkg-perl (>= 1.17.14),
 # makefile.pm uses -O which according to #768791 requires make (>= 4~).
