--- a/debian/control
+++ b/debian/control
@@ -27,6 +27,7 @@ Depends: autotools-dev,
 # dbgsym support landed in 1.18.0, 1.18.2 fixes a related nasty bug.
          dpkg (>= 1.18.0~),
          dpkg-dev (>= 1.18.2~),
+         dwz,
          file (>= 3.23),
          libdpkg-perl (>= 1.17.14),
 # makefile.pm uses -O which according to #768791 requires make (>= 4~).
