d/control: Remove now redundant "Suggests: dwz" (implied by Depends)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -49,7 +49,7 @@ Breaks: dh-systemd (<< 1.38),
 # fixes in the subsequent uploads. It is only needed for cross-building.
         qt5-qmake (<< 5.9.2+dfsg-8),
 Replaces: dh-systemd (<< 1.38)
-Suggests: dh-make, dwz
+Suggests: dh-make
 Provides: ${dh:CompatLevels}
 Multi-Arch: foreign
 Description: helper programs for debian/rules
