d/control: Remove versioned breaks on qt5-qmake to assist -backports
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -45,9 +45,10 @@ Breaks: dh-systemd (<< 1.38),
         cmake (<< 3.9~),
 # meson build system uses --wrap-mode, which requires meson (>= 0.40.0)
         meson (<< 0.40.0~),
+# Re-add if qt5-qmake is added to stretch-backports
 # The qmake cross wrapper was introduced in 5.9.2+dfsg-5, but got some important
 # fixes in the subsequent uploads. It is only needed for cross-building.
-        qt5-qmake (<< 5.9.2+dfsg-8),
+#        qt5-qmake (<< 5.9.2+dfsg-8),
 Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make
 Provides: ${dh:CompatLevels}
