d/control: Provide dh-sequence-{dwz,installinitramfs,systemd}
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -47,7 +47,10 @@ Breaks: dh-systemd (<< 1.38),
 #        qt5-qmake (<< 5.9.2+dfsg-8),
 Replaces: dh-systemd (<< 1.38)
 Suggests: dh-make
-Provides: ${dh:CompatLevels}
+Provides: ${dh:CompatLevels},
+          dh-sequence-dwz,
+          dh-sequence-installinitramfs,
+          dh-sequence-systemd,
 Multi-Arch: foreign
 Description: helper programs for debian/rules
  A collection of programs that can be used in a debian/rules file to
