Skip dh_installman test by default as it requires extra dependencies
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Uploaders: Niels Thykier <niels@thykier.net>,
 Build-Depends: dpkg-dev (>= 1.18.0~),
                perl:any,
                po4a,
+               man-db <pkg.debhelper.ci>,
+               libtest-pod-perl <pkg.debhelper.ci>,
 Rules-Requires-Root: no
 Standards-Version: 4.4.0
 Testsuite: autopkgtest-pkg-perl
