--- a/debian/control
+++ b/debian/control
@@ -29,7 +29,7 @@ Depends: autotools-dev,
 # dbgsym support landed in 1.18.0, 1.18.2 fixes a related nasty bug.
          dpkg (>= 1.18.0~),
          dpkg-dev (>= 1.18.2~),
-         dwz,
+         dwz (>= 0.12.20190711),
          file (>= 3.23),
          libdpkg-perl (>= 1.17.14),
          man-db,
