.gitlab-ci: Use stable for now in case it fixes CI
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 tests-stable-backports:
   stage: test
-  image: debian:stable-backports
+#  image: debian:stable-backports
+  image: debian:stable
   script:
     - apt-get update
     - apt-get build-dep -y .
