Revert ".gitlab-ci: Use stable for now in case it fixes CI"
This reverts commit 0a7ccb4d316d8bdfd44afdf8687358b1a9fcb5a2.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 tests-stable-backports:
   stage: test
-#  image: debian:stable-backports
-  image: debian:stable
+  image: debian:stable-backports
   script:
     - apt-get update
     - apt-get build-dep -y .
