Transition to new --destdir default in dh_auto_install [c15]
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/control
+++ b/debian/control
@@ -53,6 +53,7 @@ Provides: ${dh:CompatLevels},
           dh-sequence-dwz,
           dh-sequence-elf-tools,
           dh-sequence-installinitramfs,
+          dh-sequence-single-binary,
           dh-sequence-systemd,
 Multi-Arch: foreign
 Description: helper programs for debian/rules
